@@ -7,7 +7,7 @@ set app_version=0.0.1-SNAPSHOT
 set app_port=30008
 set app_active=prod
 
-set java_opts=-Xms1536m -Xmx1536m -Xmn1024m -Xss256K -XX:SurvivorRatio=4 -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=256m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=92 -XX:+UseCMSInitiatingOccupancyOnly
+set java_opts=-Xms1536m -Xmx1536m -Xmn512m -Xss256K
 
 title %app_name%-%app_version%-%app_port%
 
